--- a/_includes/home/our-team.html
+++ b/_includes/home/our-team.html
@@ -12,8 +12,8 @@
                  <div class="our-team__item-img">
                      <img data-src="assets/img/team-indra-sandal.png" alt="Indra Sandal - National Lead, VUHC Initiative Chief of Innovation, Tampa VAMC" class="lazy" />
                   </div>
-                  <h3 class="margin-bottom-0">Indra Sandal</h3>
-                  <h4 class="margin-top-0 text-base-dark">National Lead, VUHC Initiative Chief of Innovation, Tampa VAMC</h4>
+                  <h2 class="margin-bottom-0 h3">Indra Sandal</h2>
+                  <h3 class="margin-top-0 text-base-dark h4">National Lead, VUHC Initiative Chief of Innovation, Tampa VAMC</h3>
                </div>
             </div>
             <div class="grid-col-12 tablet:grid-col-3 desktop:grid-col-3">
@@ -21,8 +21,8 @@
                  <div class="our-team__item-img">
                      <img data-src="assets/img/team-ben-williams.png" alt="Ben Williams - Co-Lead, VUHC Initiative Director, VTP" class="lazy" />
                   </div>
-                  <h3 class="margin-bottom-0">Ben Williams</h3>
-                  <h4 class="margin-top-0 text-base-dark">Co-Lead, VUHC Initiative Director, VTP</h4>
+                  <h2 class="margin-bottom-0 h3">Ben Williams</h2>
+                  <h3 class="margin-top-0 text-base-dark h4">Co-Lead, VUHC Initiative Director, VTP</h3>
                </div>
             </div>
             <div class="grid-col-12 tablet:grid-col-3 desktop:grid-col-3">
@@ -30,8 +30,8 @@
                  <div class="our-team__item-img">
                      <img data-src="assets/img/team-kristopher-teague.png" alt="Kristopher Teague - Executive Director, VHA Innovation Ecosystem" class="lazy" />
                   </div>
-                  <h3 class="margin-bottom-0">Kristopher Teague</h3>
-                  <h4 class="margin-top-0 text-base-dark">Executive Director, VHA Innovation Ecosystem</h4>
+                  <h2 class="margin-bottom-0 h3">Kristopher Teague</h2>
+                  <h3 class="margin-top-0 text-base-dark h4">Executive Director, VHA Innovation Ecosystem</h3>
                </div>
             </div>
             <div class="grid-col-12 tablet:grid-col-3 desktop:grid-col-3">
@@ -39,8 +39,8 @@
                  <div class="our-team__item-img">
                      <img data-src="assets/img/team-garth-miller.png" alt="Garth Miller - Executive Director Member Services" class="lazy" />
                   </div>
-                  <h3 class="margin-bottom-0">Garth Miller</h3>
-                  <h4 class="margin-top-0 text-base-dark">Executive Director Member Services</h4>
+                  <h2 class="margin-bottom-0 h3">Garth Miller</h2>
+                  <h3 class="margin-top-0 text-base-dark h4">Executive Director Member Services</h3>
                </div>
             </div>        
           </div>
@@ -50,9 +50,9 @@
                  <div class="our-team__item-img">
                      <img data-src="assets/img/team-greg-goins.png" alt="Greg Goins - VISN 9 Network Director" class="lazy" />
                   </div>
-                  <h3 class="margin-bottom-0">Greg Goins</h3>
-                  <h4 class="margin-top-0 text-base-dark">VISN 9<br />
-                     Network Director</h4>
+                  <h2 class="margin-bottom-0 h3">Greg Goins</h2>
+                  <h3 class="margin-top-0 text-base-dark h4">VISN 9<br />
+                     Network Director</h3>
                </div>
             </div> 
             <div class="grid-col-12 tablet:grid-col-3 desktop:grid-col-3">
@@ -60,8 +60,8 @@
                  <div class="our-team__item-img">
                      <img data-src="assets/img/team-anthony-stazzone.png" alt="Anthony Stazzone - VISN 9 Chief Medical Officer" class="lazy" />
                   </div>
-                  <h3 class="margin-bottom-0">Anthony Stazzone</h3>
-                  <h4 class="margin-top-0 text-base-dark">VISN 9<br />Chief Medical Officer</h4>
+                  <h2 class="margin-bottom-0 h3">Anthony Stazzone</h2>
+                  <h3 class="margin-top-0 text-base-dark h4">VISN 9<br />Chief Medical Officer</h3>
                </div>
             </div> 
             <div class="grid-col-12 tablet:grid-col-3 desktop:grid-col-3">
@@ -69,8 +69,8 @@
                  <div class="our-team__item-img">
                      <img data-src="assets/img/team-david-dunning.png" alt="David Dunning - Executive Director, Tampa VAMC" class="lazy" />
                   </div>
-                  <h3 class="margin-bottom-0">David Dunning</h3>
-                  <h4 class="margin-top-0 text-base-dark">Executive Director, Tampa VAMC</h4>
+                  <h2 class="margin-bottom-0 h3">David Dunning</h2>
+                  <h3 class="margin-top-0 text-base-dark h4">Executive Director, Tampa VAMC</h3>
                </div>
             </div>             
           </div>
