--- a/_includes/home/publications.html
+++ b/_includes/home/publications.html
@@ -10,7 +10,7 @@
                     <div class="usa-card">
                         <a href="https://news.va.gov/122430/vha-uber-health-connect-veterans-transportation/" class="usa-card__container usa-card__link shadow-3">
                             <div class="usa-card__header">
-                                <h4>VHA-Uber Health Connect expands Veterans' access to transportation</h4>
+                                <h2 class="h4">VHA-Uber Health Connect expands Veterans' access to transportation</h2>
                             </div>
                             <div class="usa-card__body">
                                 <p>Program aims to eliminate transportation as a barrier to Veteran health care</p>
@@ -21,7 +21,7 @@
                     <div class="usa-card">
                         <a href="https://www.va.gov/lebanon-health-care/news-releases/lebanon-vamc-offers-new-transportation-program-for-medical-care-to-local-patients/" class="usa-card__container usa-card__link shadow-3">
                             <div class="usa-card__header">
-                                <h4>Lebanon VAMC offers new transportation program for medical care to local patients</h4>
+                                <h2 class="h4">Lebanon VAMC offers new transportation program for medical care to local patients</h2>
                             </div>
                             <div class="usa-card__body">
                                 <p>Based on survey feedback from 2,300 Veterans between March 2022 to January 2023, 83% of Veterans stated they would not have been able to access their medical care without the program.</p>
@@ -33,7 +33,7 @@
                     <div class="usa-card">
                         <a href="https://www.wptv.com/news/region-c-palm-beach-county/west-palm-beach/new-uber-and-va-partnership-gives-free-rides" class="usa-card__container usa-card__link shadow-3">
                             <div class="usa-card__header">
-                                <h4>New Uber and VA partnership gives free rides</h4>
+                                <h2 class="h4">New Uber and VA partnership gives free rides</h2>
                             </div>
                             <div class="usa-card__body">
                                 <p>A new partnership between Uber and the VA Medical Centers around the country is being used by local veterans here in South Florida.</p>
@@ -44,7 +44,7 @@
                     <div class="usa-card">
                         <a href="https://www.41nbc.com/free-uber-health-connect-service-boosts-veterans-access-to-healthcare-in-dublin/" class="usa-card__container usa-card__link shadow-3">
                             <div class="usa-card__header">
-                                <h4>Free Uber Health Connect Service boosts veterans' access to healthcare in Dublin</h4>
+                                <h2 class="h4">Free Uber Health Connect Service boosts veterans' access to healthcare in Dublin</h2>
                             </div>
                             <div class="usa-card__body">
                                 <p>Dublin's Carl Vinson VA Medical Center is enhancing healthcare accessibility for veterans by offering the free Uber Health Connect Service, aiming to reduce missed appointments and improve consistent care.</p>
@@ -53,12 +53,12 @@
                     </div>                    
                 </div>
                 <div>
-                    <button type="button" class="usa-button vhaPrevBtn vha-button vha-button--pubs-carousel margin-right-3">
+                    <button type="button" class="usa-button vhaPrevBtn vha-button vha-button--pubs-carousel margin-right-3" aria-label="previous">
                         <svg class="usa-icon" aria-hidden="true" focusable="false" role="img">
                             <use xlink:href="assets/uswds/img/sprite.svg#arrow_back"></use>
                         </svg>                    
                     </button>
-                    <button type="button" class="usa-button vhaNextBtn vha-button vha-button--pubs-carousel">
+                    <button type="button" class="usa-button vhaNextBtn vha-button vha-button--pubs-carousel" aria-label="next">
                         <svg class="usa-icon" aria-hidden="true" focusable="false" role="img">
                             <use xlink:href="assets/uswds/img/sprite.svg#arrow_forward"></use>
                         </svg>
