--- a/_includes/home/announcements-events.html
+++ b/_includes/home/announcements-events.html
@@ -3,10 +3,24 @@
     <div class="grid-container primary-background--light radius-lg">
         <div class="grid-row grid-gap flex-align-center mobile:padding-y-8 tablet:padding-y-10 desktop-lg:padding-y-15">
             <div class="mobile:grid-col-12 tablet:grid-col-8 tablet-lg:grid-col-9 desktop-lg:grid-col-5 desktop-lg:grid-offset-2">
-                <h1>Initiative Announcements and Events</h1>
+                <h1>Initiative Announcements</h1>
+                <p>VHA-Uber Health Connect Initiative Expanding Enterprise Wide across VA as the Veteran
+                    Transportation Program (VTP) Beneficiary Travel (BT) Rideshare Services</p>
+                    
                 <ul class="line-height-sans-4">
-                    <li>The VUHC Initiative will expand to additional VA Medical Centers in 2024</li>
-                    <li>Join the VUHC National Team at the 2024 American College of Healthcare Executives Congress from 25 - 28 March 2024</li>
+                    <li>
+                    Beginning May 1, 2024, the Veterans Transportation Program (VTP) Office is expanding this program enterprise wide and the 
+                    program going forward will be called VTP Beneficiary Travel (BT) Rideshare Services.
+                    </li>
+
+                    <li>
+                    For more information about rideshare services, please contact your local VAMC transportation office.
+                    </li>
+
+                    <li>
+                    Access the VTP SharePoint page <a href="https://dvagov.sharepoint.com/sites/vhamsvtp/SitePages/VTP.aspx">here</a> <strong>Please note this link is only accessible to VA employees.</strong>
+                    </li>
+
                 </ul>
                 <a href="assets/documents/VHA-Uber-Health-Connect-Initiative-FAQ.pdf"class="usa-button button-vha" title="Read the VUHC Initiative FAQ">View and Download Brochure</a>
             </div>
