--- a/_includes/home/multimedia.html
+++ b/_includes/home/multimedia.html
@@ -3,7 +3,7 @@
     <div class="grid-container">
         <div class="grid-row grid-gap">
             <div class="grid-col-12 text-center">
-                <h1 class="margin-top-0">Multimedia</h1>
+                <h1 class="margin-top-0">Multimedia and Other Resources</h1>
             </div>
         </div>
         <div class="grid-row grid-gap text-center">
@@ -59,8 +59,12 @@
                 </div>
             </div>    
         </div>
+
+
+
+
         <div class="grid-row grid-gap text-center">
-            <div class="grid-col-12 tablet:grid-offset-4 desktop:grid-offset-4 tablet:grid-col-4 desktop:grid-col-4">
+            <div class="grid-col-12 tablet:grid-col-4 desktop:grid-col-4">
                 <div class="usa-card ">
                     <div class="usa-card__container shadow-3">
                         <div class="usa-card__header">
@@ -79,7 +83,42 @@
                     </div>
                 </div>
             </div>
+            <div class="grid-col-12 tablet:grid-col-4 desktop:grid-col-4">
+                <div class="usa-card">
+                    <div class="usa-card__container shadow-3">
+                        <div class="usa-card__header">
+                            <h2 class="h4">VHA-Uber Health Connect Initiative Playbook</h2>
+                        </div>
+                        <div class="usa-card__media usa-card__media--inset">
+                            <div class="usa-card__img">
+                                <a href="/assets/documents/VHA-Uber-Health-Connect-Initiative-Playbook.pdf">
+                                    <img data-src="assets/img/media-1.png" class="img-fluid radius-lg lazy" alt="VHA Playbook" />
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="grid-col-12 tablet:grid-col-4 desktop:grid-col-4">
+                <div class="usa-card">
+                    <div class="usa-card__container shadow-3">
+                        <div class="usa-card__header">
+                            <h2 class="h4">VHA-Uber Health Connect Initiative Final Report</h2>
+                        </div>
+                        <div class="usa-card__media usa-card__media--inset">
+                            <div class="usa-card__img">
+                                <a href="/assets/documents/VHA-Uber-Health-Connect-Initiative-Final-Report.pdf">
+                                    <img data-src="assets/img/media-2.png" class="img-fluid radius-lg lazy" alt="VHA Final Report" />
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>    
         </div>
+
+
+
     </div>
 </section>
 <!-- OUR TEAM - END -->
